# Practical-LLMs

./: .gitignore  How to learn with this.md  README.md  pyproject-container.toml  pyproject.toml  run_demo.py  train_finetune_full.py  train_finetune_lora.py  train_pretrain.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python-instructions.md
Tutorial/: 01 - Tokenization.md  02 - Embeddings.md  03 - PositionalEncoding.md  04 - Attention.md  05 - FeedForwardNetwork.md  06 - TransformerBlock.md  07 - GPTModel.md  08 - Training.md  09 - TextGeneration.md  10 - FineTuning.md  5 - FeedForwardNetwork.md  6 - TransformerBlock.md  7 - GPTModel.md  How to learn with this.md
checkpoints/: tokenizer.json
data/: .gitkeep
src/: __init__.py  activations.py  attention.py  layers.py  lora.py  model.py  model_mlx.py  optimizer.py  tokenizer.py  transformer.py  utils.py
tests/: __init__.py  test_activations.py  test_attention.py  test_layers.py  test_lora.py  test_model.py  test_model_mlx.py  test_optimizer.py  test_tokenizer.py  test_transformer.py  test_utils.py
