[project]
name = "llm-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlx==0.30.4",
    "mlx-metal==0.30.4",
    "numpy==2.4.1",
    "pip==26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "pytest-cov>=7.0.0",
]
